--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.TutorConnect"
         tools:targetApi="31">
         <activity
+            android:name=".NewPasswordTeacher"
+            android:exported="false" />
+        <activity
+            android:name=".VerifyEmailTeacher"
+            android:exported="false" />
+        <activity
+            android:name=".ForgetPasswordTeacher"
+            android:exported="false" />
+        <activity
+            android:name=".TeacherWalkthrough"
+            android:exported="false" />
+        <activity
             android:name=".TeacherHomePage"
             android:exported="false" />
         <activity
