--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.TutorConnect"
         tools:targetApi="31">
         <activity
+            android:name=".VerifyEmailStudent"
+            android:exported="false" />
+        <activity
+            android:name=".ForgetPasswordStudent"
+            android:exported="false" />
+        <activity
+            android:name=".StudentHomePage"
+            android:exported="false" />
+        <activity
+            android:name=".StudentWalkthrough"
+            android:exported="false" />
+        <activity
             android:name=".NewPasswordTeacher"
             android:exported="false" />
         <activity
