--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.TutorConnect"
         tools:targetApi="31">
         <activity
+            android:name=".ViewPostedRequirementsStudent"
+            android:exported="false" />
+        <activity
+            android:name=".FindTutorStudent"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileStudent"
+            android:exported="false" />
+        <activity
+            android:name=".SettingStudent"
+            android:exported="false" />
+        <activity
+            android:name=".PostRequirementStudent"
+            android:exported="false" />
+        <activity
             android:name=".VerifyEmailStudent"
             android:exported="false" />
         <activity
